# BitNet

./: .gitignore  CMakeLists.txt  gmon.out
src/: CMakeLists.txt  main.cpp  net_common.h  train.cpp  train.h
src/layers/: layers.h
src/layers/bit/: bit_dense.h  bit_input.h  bit_sign_activation.h
src/layers/int/: int_dense.h  int_input.h  int_sign_activation.h
src/layers/real/: real_dense.h
src/util/: bit_helper.cpp  bit_helper.h  make_data.h  random_util.cpp  random_util.h
test/: CMakeLists.txt  dummy_test.cpp  gmon.out  net_test.cpp
